# bookstore_drf

./: Dockerfile  Procfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  start.sh
.github/workflows/: workflow-pr.yml
config/: settings.py  urls.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/models/tests/: test_order.py
order/serializers/: order_serializer.py
order/viewsets/: order_viewset.py
order/viewsets/tests/: test_order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py  0002_rename_categorie_product_category.py
product/models/: product.py
product/models/tests/: test_category.py  test_product.py
product/serializers/: category_serializer.py  product_serializer.py
product/viewsets/: category_viewset.py  product_viewset.py
product/viewsets/tests/: test_category_viewset.py  test_product_viewset.py
